# fiers

./: .gitignore  .rustfmt.toml  Cargo.toml  license
src/: blueprint.rs  lib.rs  util.rs
src/fuzzy/: membership.rs  mod.rs  norm.rs
